RESOLVED FIXED165878
Fix cause of viewport-related flakiness in iOS tests
https://bugs.webkit.org/show_bug.cgi?id=165878
Summary Fix cause of viewport-related flakiness in iOS tests
Simon Fraser (smfr)
Reported 2016-12-14 15:26:23 PST
Fix cause of viewport-related flakiness in iOS tests
Attachments
Patch (18.57 KB, patch)
2016-12-14 15:31 PST, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2016-12-14 15:31:47 PST
WebKit Commit Bot
Comment 2 2016-12-14 15:34:09 PST
Attachment 297138 [details] did not pass style-queue: ERROR: Source/WebKit2/Shared/VisibleContentRectUpdateInfo.h:63: Wrong number of spaces before statement. (expected: 12) [whitespace/indent] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2016-12-14 15:47:16 PST
Comment on attachment 297138 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=297138&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:2034 > + [_contentView setSizeChangedSinceLastVisibleContentRectUpdate:YES]; Is this all OK with WKPDFView?
Simon Fraser (smfr)
Comment 4 2016-12-14 22:40:33 PST
Note You need to log in before you can comment on or make changes to this bug.