Source/WebKit2/Shared/VisibleContentRectUpdateInfo.cpp
@@ -47,6 +47,7 @@ void VisibleContentRectUpdateInfo::encode(IPC::Encoder& encoder) const
     encoder << m_verticalVelocity;
     encoder << m_scaleChangeRate;
     encoder << m_inStableState;
+    encoder << m_isFirstUpdateForNewViewSize;
     encoder << m_isChangingObscuredInsetsInteractively;
     encoder << m_allowShrinkToFit;
     encoder << m_enclosedInScrollableAncestorView;
@@ -77,6 +78,8 @@ bool VisibleContentRectUpdateInfo::decode(IPC::Decoder& decoder, VisibleContentR
     if (!decoder.decode(result.m_scaleChangeRate))
         return false;
     if (!decoder.decode(result.m_inStableState))
+        return false;
+    if (!decoder.decode(result.m_isFirstUpdateForNewViewSize))
         return false;
     if (!decoder.decode(result.m_isChangingObscuredInsetsInteractively))
         return false;
@@ -111,6 +114,7 @@ TextStream& operator<<(TextStream& ts, const VisibleContentRectUpdateInfo& info)
 
     ts.dumpProperty("scale", info.scale());
     ts.dumpProperty("inStableState", info.inStableState());
+    ts.dumpProperty("isFirstUpdateForNewViewSize", info.isFirstUpdateForNewViewSize());
     if (info.isChangingObscuredInsetsInteractively())
         ts.dumpProperty("isChangingObscuredInsetsInteractively", info.isChangingObscuredInsetsInteractively());
     if (info.enclosedInScrollableAncestorView())
